--- a/CMPE255_Assignment_2_Dimensionality_Reduction_Techniques.ipynb
+++ b/CMPE255_Assignment_2_Dimensionality_Reduction_Techniques.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "CMPE255_Assignment_2_Dimensionality_Reduction_Techniques.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyORQXrkDiPC8nGPj66SdTRZ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPHHrYUhbF/1KWMSbGRgjDW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,9 +43,9 @@
         "id": "haHpILyMN1Zz"
       },
       "source": [
-        ""
+        "import numpy as np\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
